--- a/Project/KEIL5/Project.uvprojx
+++ b/Project/KEIL5/Project.uvprojx
@@ -15,7 +15,7 @@
         <TargetCommonOption>
           <Device>STM32F405RG</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <PackID>Keil.STM32F4xx_DFP.2.6.0</PackID>
+          <PackID>Keil.STM32F4xx_DFP.2.7.0</PackID>
           <PackURL>http://www.keil.com/pack</PackURL>
           <Cpu>IROM(0x08000000,0x100000) IRAM(0x20000000,0x20000) IRAM2(0x10000000,0x10000) CPUTYPE("Cortex-M4") FPU2 CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
@@ -693,11 +693,6 @@
               <FilePath>..\..\HAL\STM32F4\F4ADC.cpp</FilePath>
             </File>
             <File>
-              <FileName>F4UART.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\..\HAL\STM32F4\F4UART.cpp</FilePath>
-            </File>
-            <File>
               <FileName>F4SysTimer.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\HAL\STM32F4\F4SysTimer.cpp</FilePath>
@@ -746,6 +741,16 @@
               <FileName>F4CriticalSection.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\HAL\STM32F4\F4CriticalSection.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>F4UART2.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\HAL\STM32F4\F4UART2.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>F4UART.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\HAL\STM32F4\F4UART.cpp</FilePath>
             </File>
           </Files>
         </Group>
@@ -876,6 +881,21 @@
               <FileName>NRF_RC.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\HAL\sensors\NRF_RC.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>FoxFlow.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\HAL\sensors\FoxFlow.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>VL53L0X.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\HAL\sensors\VL53L0X.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>ADIS16405.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\HAL\sensors\ADIS16405.cpp</FilePath>
             </File>
           </Files>
         </Group>
@@ -1926,7 +1946,7 @@
               <RVCTZI>0</RVCTZI>
               <RVCTOtherData>0</RVCTOtherData>
               <ModuleSelection>0</ModuleSelection>
-              <IncludeInBuild>0</IncludeInBuild>
+              <IncludeInBuild>1</IncludeInBuild>
               <AlwaysBuild>2</AlwaysBuild>
               <GenerateAssemblyFile>2</GenerateAssemblyFile>
               <AssembleAssemblyFile>2</AssembleAssemblyFile>
@@ -2003,6 +2023,11 @@
               <FileType>8</FileType>
               <FilePath>..\..\BSP\boards\mo_v3\RCOUT.cpp</FilePath>
             </File>
+            <File>
+              <FileName>adis16405.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\BSP\boards\mo_v3\adis16405.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -2014,7 +2039,7 @@
               <RVCTZI>0</RVCTZI>
               <RVCTOtherData>0</RVCTOtherData>
               <ModuleSelection>0</ModuleSelection>
-              <IncludeInBuild>1</IncludeInBuild>
+              <IncludeInBuild>0</IncludeInBuild>
               <AlwaysBuild>2</AlwaysBuild>
               <GenerateAssemblyFile>2</GenerateAssemblyFile>
               <AssembleAssemblyFile>2</AssembleAssemblyFile>
@@ -2095,6 +2120,99 @@
               <FileName>RGBLED.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\BSP\boards\rk3288_backend_flying\RGBLED.cpp</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>BSP_fox_v1</GroupName>
+          <GroupOption>
+            <CommonProperty>
+              <UseCPPCompiler>0</UseCPPCompiler>
+              <RVCTCodeConst>0</RVCTCodeConst>
+              <RVCTZI>0</RVCTZI>
+              <RVCTOtherData>0</RVCTOtherData>
+              <ModuleSelection>0</ModuleSelection>
+              <IncludeInBuild>0</IncludeInBuild>
+              <AlwaysBuild>2</AlwaysBuild>
+              <GenerateAssemblyFile>2</GenerateAssemblyFile>
+              <AssembleAssemblyFile>2</AssembleAssemblyFile>
+              <PublicsOnly>2</PublicsOnly>
+              <StopOnExitCode>11</StopOnExitCode>
+              <CustomArgument></CustomArgument>
+              <IncludeLibraryModules></IncludeLibraryModules>
+              <ComprImg>1</ComprImg>
+            </CommonProperty>
+            <GroupArmAds>
+              <Cads>
+                <interw>2</interw>
+                <Optim>0</Optim>
+                <oTime>2</oTime>
+                <SplitLS>2</SplitLS>
+                <OneElfS>2</OneElfS>
+                <Strict>2</Strict>
+                <EnumInt>2</EnumInt>
+                <PlainCh>2</PlainCh>
+                <Ropi>2</Ropi>
+                <Rwpi>2</Rwpi>
+                <wLevel>0</wLevel>
+                <uThumb>2</uThumb>
+                <uSurpInc>2</uSurpInc>
+                <uC99>2</uC99>
+                <useXO>2</useXO>
+                <v6Lang>0</v6Lang>
+                <v6LangP>0</v6LangP>
+                <vShortEn>2</vShortEn>
+                <vShortWch>2</vShortWch>
+                <v6Lto>2</v6Lto>
+                <v6WtE>2</v6WtE>
+                <v6Rtti>2</v6Rtti>
+                <VariousControls>
+                  <MiscControls></MiscControls>
+                  <Define></Define>
+                  <Undefine></Undefine>
+                  <IncludePath></IncludePath>
+                </VariousControls>
+              </Cads>
+              <Aads>
+                <interw>2</interw>
+                <Ropi>2</Ropi>
+                <Rwpi>2</Rwpi>
+                <thumb>2</thumb>
+                <SplitLS>2</SplitLS>
+                <SwStkChk>2</SwStkChk>
+                <NoWarn>2</NoWarn>
+                <uSurpInc>2</uSurpInc>
+                <useXO>2</useXO>
+                <uClangAs>2</uClangAs>
+                <VariousControls>
+                  <MiscControls></MiscControls>
+                  <Define></Define>
+                  <Undefine></Undefine>
+                  <IncludePath></IncludePath>
+                </VariousControls>
+              </Aads>
+            </GroupArmAds>
+          </GroupOption>
+          <Files>
+            <File>
+              <FileName>AsyncWorker.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\BSP\boards\fox_v1\AsyncWorker.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>init.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\BSP\boards\fox_v1\init.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>RCOUT.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\BSP\boards\fox_v1\RCOUT.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>RGBLED.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\BSP\boards\fox_v1\RGBLED.cpp</FilePath>
             </File>
           </Files>
         </Group>
