--- a/Project/visualstudio2008/hackrf_narrowband_fft/window.rc
+++ b/Project/visualstudio2008/hackrf_narrowband_fft/window.rc
@@ -52,12 +52,14 @@ END
 // Dialog
 //
 
-IDD_DIALOG1 DIALOGEX 0, 0, 853, 452
+IDD_DIALOG1 DIALOGEX 0, 0, 853, 490
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Dialog"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LTEXT           "¾²Ì¬",IDC_GRAPH,7,7,839,438
+    LTEXT           "¾²Ì¬",IDC_GRAPH,7,7,839,444
+    CONTROL         "",IDC_SLIDER1,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,41,467,267,16
+    CONTROL         "",IDC_SLIDER2,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,388,463,232,20
 END
 
 
@@ -74,7 +76,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 846
         TOPMARGIN, 7
-        BOTTOMMARGIN, 445
+        BOTTOMMARGIN, 483
     END
 END
 #endif    // APSTUDIO_INVOKED
