NBFFT: added FFT based RBW filter and higher FFT size. changed data order of RBW filtering.

--- a/Project/visualstudio2008/hackrf_narrowband_fft/window.rc
+++ b/Project/visualstudio2008/hackrf_narrowband_fft/window.rc
@@ -64,9 +64,11 @@ BEGIN
     LTEXT           "FFT Size",IDC_STATIC,14,463,28,8
     COMBOBOX        ID_CB_RBW,36,441,75,57,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        ID_CB_FFTSIZE,44,462,75,57,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        ID_CB_DEVICES,709,434,75,57,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Device:",IDC_DEVICE,673,433,30,11
-    PUSHBUTTON      "Open",IDC_OPEN,793,433,44,13
+    COMBOBOX        ID_CB_DEVICES,667,434,75,57,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Device:",IDC_DEVICE,631,436,30,11
+    PUSHBUTTON      "Open",IDC_OPEN,751,433,44,13
+    PUSHBUTTON      "Record...",IDC_RECORD,774,460,59,15
+    PUSHBUTTON      "Config",IDC_CONFIG,795,433,44,13
 END
 
 
