NBFFT: basic tuning support.

--- a/Project/visualstudio2008/hackrf_narrowband_fft/window.rc
+++ b/Project/visualstudio2008/hackrf_narrowband_fft/window.rc
@@ -62,13 +62,14 @@ BEGIN
     EDITTEXT        IDC_RBW,122,442,93,12,ES_AUTOHSCROLL
     LTEXT           "Hz",IDC_RBW_HZ,221,443,21,11
     LTEXT           "FFT Size",IDC_STATIC,14,463,28,8
-    COMBOBOX        ID_CB_RBW,36,441,75,57,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        ID_CB_FFTSIZE,44,462,75,57,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        ID_CB_DEVICES,667,434,75,57,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        ID_CB_RBW,36,441,75,57,CBS_DROPDOWNLIST | WS_VSCROLL
+    COMBOBOX        ID_CB_FFTSIZE,44,462,75,57,CBS_DROPDOWNLIST | WS_VSCROLL
+    COMBOBOX        ID_CB_DEVICES,667,434,75,57,CBS_DROPDOWNLIST | WS_VSCROLL
     LTEXT           "Device:",IDC_DEVICE,631,436,30,11
     PUSHBUTTON      "Open",IDC_OPEN,751,433,44,13
     PUSHBUTTON      "Record...",IDC_RECORD,774,460,59,15
     PUSHBUTTON      "Config",IDC_CONFIG,795,433,44,13
+    EDITTEXT        IDC_FREQ,291,454,267,16,ES_AUTOHSCROLL
 END
 
 
