hackrf_narrowband_fft
fixed CyAPI::Ep0VendorCommand duplicated transfers.
fixed 8bit logging support.

--- a/Project/visualstudio2008/hackrf_narrowband_fft/hackrf_narrowband_fft.vcproj
+++ b/Project/visualstudio2008/hackrf_narrowband_fft/hackrf_narrowband_fft.vcproj
@@ -193,6 +193,22 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\modules\math\matrix.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\math\matrix.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\uwb.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\uwb.h"
+				>
+			</File>
+			<File
 				RelativePath=".\wfm_draw.cpp"
 				>
 				<FileConfiguration
