F4SDR: sweeping support. hackrf_narrowband_fft: (wideband) sweeping support for hackrf & F4SDR.

--- a/Project/visualstudio2008/hackrf_narrowband_fft/hackrf_narrowband_fft.vcproj
+++ b/Project/visualstudio2008/hackrf_narrowband_fft/hackrf_narrowband_fft.vcproj
@@ -201,11 +201,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\modules\uwb.cpp"
+				RelativePath=".\sweepSA.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\modules\uwb.h"
+				RelativePath=".\sweepSA.h"
 				>
 			</File>
 			<File
@@ -436,10 +436,6 @@
 		<Filter
 			Name="devices"
 			>
-			<File
-				RelativePath=".\device.h"
-				>
-			</File>
 			<File
 				RelativePath=".\device_bulk.cpp"
 				>
