--- a/Project/visualstudio2008/hackrf_narrowband_fft/window.rc
+++ b/Project/visualstudio2008/hackrf_narrowband_fft/window.rc
@@ -77,7 +77,8 @@ BEGIN
     LTEXT           "Marker: None",IDC_MARKER,159,541,105,22
     CONTROL         "Heatmap",IDC_HEATMAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,235,516,27,13
     PUSHBUTTON      "DSO",IDC_DSO,709,543,54,13
-    CONTROL         "SA",IDC_SA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,668,543,27,13
+    CONTROL         "SA",IDC_SA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,620,542,27,13
+    PUSHBUTTON      "SweepSA",IDC_SWEEP_SA,651,543,54,13
 END
 
 IDD_DSO DIALOGEX 0, 0, 745, 453
@@ -92,6 +93,16 @@ BEGIN
     PUSHBUTTON      "Run/Stop",IDC_RUN,433,431,46,15
     PUSHBUTTON      "Single",IDC_Single,485,432,38,14
     CONTROL         "AUTO",IDC_AUTO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,393,431,33,15
+END
+
+IDD_SWEEPSA DIALOGEX 0, 0, 744, 386
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Dialog"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "确定",IDOK,205,365,50,14
+    PUSHBUTTON      "取消",IDCANCEL,687,365,50,14
+    LTEXT           "静态",IDC_GRAPH,7,7,664,342,WS_BORDER
 END
 
 
@@ -117,6 +128,14 @@ BEGIN
         RIGHTMARGIN, 738
         TOPMARGIN, 7
         BOTTOMMARGIN, 446
+    END
+
+    IDD_SWEEPSA, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 737
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 379
     END
 END
 #endif    // APSTUDIO_INVOKED
